# multiagent-poker-collusion

./: .gitignore  README.md  agent.py  analyze_winnings.py  example.env  generate_fake_games.py  llm_prompts.py  pgcopy  preflop_solver.py  requirements.txt  run_game.py  run_two_llm_game.py  solver_state.py  test_solver.py  test_solver_6player.py
cash6m_100bb_nl50_gto_gto/: info.txt
cash6m_100bb_nl50_gto_gto/ranges/BTN/2.5bb/BB/13bb/BTN/call/: BTN.txt
cash6m_100bb_nl50_gto_gto/ranges/BTN/2.5bb/BB/allin/BTN/call/: BTN.txt
cash6m_100bb_nl50_gto_gto/ranges/BTN/2.5bb/SB/12bb/BTN/call/: BTN.txt
cash6m_100bb_nl50_gto_gto/ranges/BTN/2.5bb/SB/allin/BTN/call/: BTN.txt
cash6m_100bb_nl50_gto_gto/ranges/CO/2.3bb/BB/13.5bb/CO/call/: CO.txt
cash6m_100bb_nl50_gto_gto/ranges/CO/2.3bb/BB/allin/CO/call/: CO.txt
cash6m_100bb_nl50_gto_gto/ranges/CO/2.3bb/BTN/7.5bb/CO/call/: CO.txt
cash6m_100bb_nl50_gto_gto/ranges/CO/2.3bb/BTN/allin/CO/call/: CO.txt
game_environment/: cfr_agent.py  colluding_prompt_example.txt  collusion_llm_agent.py  game.py  llm_agent.py  main.py  mixed_player_game.py  regular_prompt_example.txt  robopoker_agent.py  solver_agent.py  two_llm_game.py
poker_solver_engine/: Cargo.toml
poker_solver_engine/src/: file.rs  lib.rs  mutex_like.rs
postflop_solver_engine/: Cargo.toml  build.rs  pyproject.toml
postflop_solver_engine/src/: action_tree.rs  lib.rs  solver.rs
postflop_solver_engine/src/game/: interpreter.rs
texasholdem/texasholdem/game/: game.py  history.py  utils.py
texasholdem/texasholdem/gui/: text_gui.py
(+1881 files in other folders)
